<resources>
    <string name="app_name">Chiringuito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ventas">Ventas</string>
    <string name="productos">Productos</string>
    <string name="recargas">Recargas</string>
    <string name="configuraci_n">Configuración</string>
    <string name="recargas_fragment">Recargas Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="ready">Ready</string>
    <string name="total">Total:</string>
    <string name="_0_0">$ 0.0</string>
    <string name="delete_image">Delete image</string>
    <string name="edit_button">edit button</string>
    <string name="imagen_producto">imagen producto</string>
    <string name="verifique_su_orden">Verifique su orden:</string>
    <string name="total2">TOTAL:</string>
    <string name="_0_00">$ 0.00</string>
    <string name="c_h_i_r_i_n_g_u_i_t_o">Chiringuito</string>
    <string name="image_title">image title</string>
    <string name="introduzca_datos_del_producto">Introduzca datos del producto:</string>
    <string name="nombre">Nombre</string>
    <string name="precio1">Precio</string>
    <string name="uid">UID:</string>
    <string name="_00000">00000</string>
    <string name="selecciona_cantidad_a_agregar">Selecciona cantidad a agregar:</string>
    <string name="_10">$10</string>
    <string name="_50">$50</string>
    <string name="_100">$100</string>
    <string name="_200">$200</string>
    <string name="_500">$500</string>
    <string name="_20">$20</string>
    <string name="saldo12">SALDO:</string>
    <string name="nuevo_saldo">NUEVO SALDO:</string>
    <string name="editar">EDITAR</string>
    <string name="borrar">BORRAR</string>
    <string name="name">namer</string>
    <string name="precio">precioe</string>
    <string name="delete">xead</string>
    <string name="descripcion">Descripcion</string>
    <string name="hola_tarola">HOLA TAROLA</string>
    <string name="lista_productos">Lista de Productos</string>
    <string name="conecte_tarjeta">Favor de conectar tarjeta</string>
    <string name="nfc">NFC</string>
    <string name="salxdo">Saldo:</string>
    <string name="recarga">Recarga:</string>
    <string name="back">BACK</string>
    <string name="ok">OK</string>
    <string name="tu_saldo_restante_es_de">Tu saldo restante es de:</string>
    <string name="saldo_restante">Saldo restante:</string>
    <string name="saldo">Saldo actual:</string>
    <string name="agregar_saldo">Agregar saldo</string>
    <string name="nuevo_saldo_nocaps">Nuevo saldo:</string>
    <string name="exito">¡La venta se ha completado con éxito!</string>

</resources>
